--- a/views/include/footer.ejs
+++ b/views/include/footer.ejs
@@ -1,3 +1,9 @@
+<style>
+    footer{
+        width: 100%;
+    }
+</style>
+
 <footer>
     <div class="social-media">
         <a href="#"><i class="fa-brands fa-instagram"></i></a>
